FE simple gets even less simple
